e2e/tests/all/snapshots/color_picker-swatches_rest_desktop.snap
---
source: e2e/src/suite.rs
description: color_picker-swatches at desktop (rest)
expression: tree
---
button "#fa5252" [pressed]
button "#40c057" [pressed=false]
button "#f8f9fa" [pressed=false]
