e2e/tests/all/snapshots/color_picker_rest_desktop.snap
---
source: e2e/src/suite.rs
description: color_picker at desktop (rest)
expression: tree
---
button "Before"
  StaticText "Before"
generic
  slider "Saturation" = 87 [valuemax=100] [valuemin=0]
generic
  generic
    slider "Hue" = 208 [valuemax=360] [valuemin=0]
paragraph
  StaticText "#1c7ed6"
button "After"
  StaticText "After"
