e2e/tests/all/snapshots/color_scheme_button_rest_desktop_dark.snap
---
source: e2e/src/suite.rs
description: "color_scheme_button at desktop (rest, dark)"
expression: tree
---
button "Switch to the light theme"
paragraph
  StaticText "Page text"
