e2e/tests/all/snapshots/color_scheme_button_rest_mobile.snap
---
source: e2e/src/suite.rs
description: color_scheme_button at mobile (rest)
expression: tree
---
button "Switch to the dark theme"
paragraph
  StaticText "Page text"
