e2e/tests/all/snapshots/color_scheme_button_rest_mobile_dark.snap
---
source: e2e/src/suite.rs
description: "color_scheme_button at mobile (rest, dark)"
expression: tree
---
button "Switch to the light theme"
paragraph
  StaticText "Page text"
