e2e/tests/all/snapshots/color_scheme_button_themes_open_mobile_dark.snap
---
source: e2e/src/suite.rs
description: "color_scheme_button_themes at mobile (open, dark)"
expression: tree
---
generic
  group "Theme"
    button "Switch to the light theme"
    button "Choose a theme" [expanded] [haspopup=menu]
generic
  menu "Choose a theme"
    group "Themes"
      generic
        StaticText "Themes"
      menuitemradio "Libero" [checked]
        StaticText "Libero"
      menuitemradio "Ayu" [checked=false]
        StaticText "Ayu"
      menuitemradio "Ayu Mirage" [checked=false]
        StaticText "Ayu Mirage"
      menuitemradio "Catppuccin" [checked=false]
        StaticText "Catppuccin"
      menuitemradio "Dracula" [checked=false]
        StaticText "Dracula"
      menuitemradio "Ef Night" [checked=false]
        StaticText "Ef Night"
      menuitemradio "Everforest" [checked=false]
        StaticText "Everforest"
      menuitemradio "Flexoki" [checked=false]
        StaticText "Flexoki"
      menuitemradio "GitHub" [checked=false]
        StaticText "GitHub"
      menuitemradio "Gruvbox" [checked=false]
        StaticText "Gruvbox"
      menuitemradio "Gruvbox Classic" [checked=false]
        StaticText "Gruvbox Classic"
      menuitemradio "Gruvbox Soft" [checked=false]
        StaticText "Gruvbox Soft"
      menuitemradio "Kanagawa" [checked=false]
        StaticText "Kanagawa"
      menuitemradio "Kanagawa Dragon" [checked=false]
        StaticText "Kanagawa Dragon"
      menuitemradio "kettek16" [checked=false]
        StaticText "kettek16"
      menuitemradio "Nord" [checked=false]
        StaticText "Nord"
      menuitemradio "One" [checked=false]
        StaticText "One"
      menuitemradio "Osmium" [checked=false]
        StaticText "Osmium"
      menuitemradio "Rosé Pine" [checked=false]
        StaticText "Rosé Pine"
      menuitemradio "Vague" [checked=false]
        StaticText "Vague"
--> aria-controls [id="lsx-N-menu"] (rendered above)
